fixed some text overflow problems

--- a/src/StoriesContainer/StoryBox/StoryBox.scss
+++ b/src/StoriesContainer/StoryBox/StoryBox.scss
@@ -8,7 +8,7 @@ $story-hover-color: #CCC8BC;
     /* child positioning props*/
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 80%;
     overflow: show;
     /*styling (the rest of the CSS)*/
     background-color: $story-background-color;
@@ -23,10 +23,10 @@ $story-hover-color: #CCC8BC;
 }*/
 
 .headlineImage{
-    width: 70%;
+    width: 60%;
     align: center;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .headlineTitle{
@@ -41,8 +41,7 @@ $story-hover-color: #CCC8BC;
     position: relative;
     height: 20%;
     width: 95%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: 1%;
 }
 
 .headlineBlurbText{
